--- a/.github/workflows/AutoTest.yml
+++ b/.github/workflows/AutoTest.yml
@@ -9,9 +9,23 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v3
 
+      - name: Add Microsoft package repository
+        run: |
+          sudo curl https://packages.microsoft.com/keys/microsoft.asc | sudo apt-key add -
+          sudo add-apt-repository "$(wget -qO- https://packages.microsoft.com/config/ubuntu/20.04/mssql-server-2019.list)"
+
       - name: Install SQLCMD
-        run: sudo apt-get install -y mssql-tools unixodbc-dev
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y mssql-tools unixodbc-dev
+          echo 'export PATH="$PATH:/opt/mssql-tools/bin"' >> ~/.bashrc
+          source ~/.bashrc
+
+      - name: Test connection to SQL Server
+        run: |
+          sqlcmd -S "tcp:0.tcp.pinggy.io,1433" -U Auto_user -P "SambePassword@1" -Q "SELECT 1" || { echo "SQLCMD failed to connect"; exit 1; }
 
       - name: Deploy Database & Table
         run: |
+          echo "Running setup.sql on SQL Server..."
           sqlcmd -S "tcp:0.tcp.pinggy.io,1433" -U Auto_user -P "SambePassword@1" -d master -i setup.sql || { echo "SQLCMD failed"; exit 1; }
